updated anthropic fundamentals notebook

--- a/antropic_fundamentals.ipynb
+++ b/antropic_fundamentals.ipynb
@@ -562,17 +562,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentiment of this movie review is positive.\n",
+      "\n",
+      "The first part of the review states that the movie \"blew my mind with its freshness and originality\", which indicates a very positive assessment of the film.\n",
+      "\n",
+      "The second part about living under a rock since 1900 is likely a humorous or sarcastic remark, but it does not negate the overall positive sentiment expressed in the first part of the review.\n",
+      "\n",
+      "So based on the language used, this movie review can be considered to have a positive sentiment, despite the somewhat tongue-in-cheek final statement.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt\n",
+    "PROMPT = \"\"\"Is this movie review sentiment positive or negative?\n",
+    "\n",
+    "This movie blew my mind with its freshness and originality. In totally unrelated news, I have been living under a rock since the year 1900.\"\"\"\n",
+    "\n",
+    "# Print Claude's response\n",
+    "print(get_completion(PROMPT))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the best arguments for positive and negative sentiment in the given review:\n",
+      "\n",
+      "<positive>\n",
+      "- The review states that the movie \"blew my mind with its freshness and originality,\" which suggests a very positive sentiment.\n",
+      "- The reviewer seems enthusiastic and impressed by the movie, indicating a favorable opinion.\n",
+      "</positive>\n",
+      "\n",
+      "<negative>\n",
+      "- The reviewer's comment about \"living under a rock since 1900\" implies that the movie's \"freshness and originality\" may not be as novel or groundbreaking as the reviewer suggests, potentially undermining the positive sentiment.\n",
+      "- The sarcastic tone of the last sentence could be interpreted as a negative or dismissive attitude towards the movie.\n",
+      "</negative>\n",
+      "\n",
+      "Based on the review, the overall sentiment appears to be positive. The reviewer's praise for the movie's \"freshness and originality\" outweighs the potentially sarcastic remark about living under a rock, suggesting a generally favorable opinion of the film.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# System prompt\n",
+    "SYSTEM_PROMPT = \"You are a savvy reader of movie reviews.\"\n",
+    "\n",
+    "# Prompt\n",
+    "PROMPT = \"\"\"Is this review sentiment positive or negative? First, write the best arguments for each side in  and  XML tags, then answer.\n",
+    "\n",
+    "This movie blew my mind with its freshness and originality. In totally unrelated news, I have been living under a rock since 1900.\"\"\"\n",
+    "\n",
+    "# Print Claude's response\n",
+    "print(get_completion(PROMPT, SYSTEM_PROMPT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the best arguments for the review being negative or positive:\n",
+      "\n",
+      "<Negative>\n",
+      "- The reviewer mentions living \"under a rock since 1900\", which suggests they are out of touch with current trends and may not be a reliable judge of the movie's freshness and originality.\n",
+      "- The reviewer's praise for the movie's \"freshness and originality\" could be sarcastic, implying that the movie is actually unoriginal or derivative.\n",
+      "</Negative>\n",
+      "\n",
+      "<Positive>\n",
+      "- The reviewer directly states that the movie \"blew my mind\", which is a strong positive sentiment.\n",
+      "- The reviewer's praise for the movie's \"freshness and originality\" suggests they genuinely enjoyed the unique and innovative aspects of the film.\n",
+      "</Positive>\n",
+      "\n",
+      "Based on the arguments presented, I would say the review is more likely to be positive than negative. The reviewer's direct praise for the movie's qualities outweighs the potential sarcasm implied by the comment about living under a rock.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt\n",
+    "PROMPT = \"\"\"Is this review sentiment negative or positive? First write the best arguments for each side in  and  XML tags, then answer.\n",
+    "\n",
+    "This movie blew my mind with its freshness and originality. Unrelatedly, I have been living under a rock since 1900.\"\"\"\n",
+    "\n",
+    "# Print Claude's response\n",
+    "print(get_completion(PROMPT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a famous movie starring an actor born in 1956:\n",
+      "\n",
+      "\"Terminator 2: Judgment Day\" (1991) starring Arnold Schwarzenegger, who was born on July 30, 1947.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Prompt\n",
+    "PROMPT = \"Name a famous movie starring an actor who was born in the year 1956.\"\n",
+    "\n",
+    "# Print Claude's response\n",
+    "print(get_completion(PROMPT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a brainstorm of some actors and their birth years:\n",
+      "\n",
+      "<Harrison Ford, 1942>\n",
+      "<Tom Hanks, 1956>\n",
+      "<Meryl Streep, 1949>\n",
+      "<Tom Cruise, 1962>\n",
+      "<Julia Roberts, 1967>\n",
+      "\n",
+      "A famous movie starring an actor born in 1956 is Forrest Gump, starring Tom Hanks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt\n",
+    "PROMPT = \"Name a famous movie starring an actor who was born in the year 1956. First brainstorm about some actors and their birth years in  tags, then give your answer.\"\n",
+    "\n",
+    "# Print Claude's response\n",
+    "print(get_completion(PROMPT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------- Full prompt with variable substutions ---------------------------\n",
+      "USER TURN\n",
+      "Please classify this email into one of the following categories:\n",
+      "(A) Pre-sale question\n",
+      "(B) Broken or defective item\n",
+      "(C) Billing question\n",
+      "(D) Other (please explain)\n",
+      "\n",
+      "After analyzing the email, provide your answer by wrapping ONLY the letter of the correct classification (without parentheses) in <answer></answer> tags. For example, if the correct classification is \"Broken or defective item\", your response should include <answer>B</answer>.\n",
+      "\n",
+      "Do not include any other text within the tags. After providing the tagged answer, briefly explain your classification.\n",
+      "\n",
+      "Here's the email to classify:\n",
+      "\n",
+      "Hi -- My Mixmaster4000 is producing a strange noise when I operate it. It also smells a bit smoky and plasticky, like burning electronics.  I need a replacement.\n",
+      "\n",
+      "ASSISTANT TURN\n",
+      "\n",
+      "\n",
+      "------------------------------------- Claude's response -------------------------------------\n",
+      "<answer>B</answer>\n",
+      "\n",
+      "The email describes an issue with a product (Mixmaster4000) that is producing strange noises and smells, indicating a potential defect or malfunction. This suggests the email should be classified as a \"Broken or defective item\" request.\n",
+      "\n",
+      "------------------------------------------ GRADING ------------------------------------------\n",
+      "This exercise has been correctly solved: False \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------- Full prompt with variable substutions ---------------------------\n",
+      "USER TURN\n",
+      "Please classify this email into one of the following categories:\n",
+      "(A) Pre-sale question\n",
+      "(B) Broken or defective item\n",
+      "(C) Billing question\n",
+      "(D) Other (please explain)\n",
+      "\n",
+      "After analyzing the email, provide your answer by wrapping ONLY the letter of the correct classification (without parentheses) in <answer></answer> tags. For example, if the correct classification is \"Broken or defective item\", your response should include <answer>B</answer>.\n",
+      "\n",
+      "Do not include any other text within the tags. After providing the tagged answer, briefly explain your classification.\n",
+      "\n",
+      "Here's the email to classify:\n",
+      "\n",
+      "Can I use my Mixmaster 4000 to mix paint, or is it only meant for mixing food?\n",
+      "\n",
+      "ASSISTANT TURN\n",
+      "\n",
+      "\n",
+      "------------------------------------- Claude's response -------------------------------------\n",
+      "<answer>A</answer>\n",
+      "\n",
+      "This email is a pre-sale question, as the customer is inquiring about the capabilities and intended use of the Mixmaster 4000 product before making a purchase.\n",
+      "\n",
+      "------------------------------------------ GRADING ------------------------------------------\n",
+      "This exercise has been correctly solved: False \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------- Full prompt with variable substutions ---------------------------\n",
+      "USER TURN\n",
+      "Please classify this email into one of the following categories:\n",
+      "(A) Pre-sale question\n",
+      "(B) Broken or defective item\n",
+      "(C) Billing question\n",
+      "(D) Other (please explain)\n",
+      "\n",
+      "After analyzing the email, provide your answer by wrapping ONLY the letter of the correct classification (without parentheses) in <answer></answer> tags. For example, if the correct classification is \"Broken or defective item\", your response should include <answer>B</answer>.\n",
+      "\n",
+      "Do not include any other text within the tags. After providing the tagged answer, briefly explain your classification.\n",
+      "\n",
+      "Here's the email to classify:\n",
+      "\n",
+      "I HAVE BEEN WAITING 4 MONTHS FOR MY MONTHLY CHARGES TO END AFTER CANCELLING!!  WTF IS GOING ON???\n",
+      "\n",
+      "ASSISTANT TURN\n",
+      "\n",
+      "\n",
+      "------------------------------------- Claude's response -------------------------------------\n",
+      "<answer>C</answer>\n",
+      "\n",
+      "The email is a billing question, as the customer is inquiring about ongoing monthly charges after cancelling a service. The all-caps tone and frustrated language indicate the customer is seeking a resolution to an issue with their billing.\n",
+      "\n",
+      "------------------------------------------ GRADING ------------------------------------------\n",
+      "This exercise has been correctly solved: False \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------- Full prompt with variable substutions ---------------------------\n",
+      "USER TURN\n",
+      "Please classify this email into one of the following categories:\n",
+      "(A) Pre-sale question\n",
+      "(B) Broken or defective item\n",
+      "(C) Billing question\n",
+      "(D) Other (please explain)\n",
+      "\n",
+      "After analyzing the email, provide your answer by wrapping ONLY the letter of the correct classification (without parentheses) in <answer></answer> tags. For example, if the correct classification is \"Broken or defective item\", your response should include <answer>B</answer>.\n",
+      "\n",
+      "Do not include any other text within the tags. After providing the tagged answer, briefly explain your classification.\n",
+      "\n",
+      "Here's the email to classify:\n",
+      "\n",
+      "How did I get here I am not good with computer.  Halp.\n",
+      "\n",
+      "ASSISTANT TURN\n",
+      "\n",
+      "\n",
+      "------------------------------------- Claude's response -------------------------------------\n",
+      "<answer>D</answer>\n",
+      "\n",
+      "The email does not appear to be related to any of the provided categories (pre-sale question, broken or defective item, or billing question). Instead, it seems to be a general request for assistance with a computer-related issue, which would fall under the \"Other\" category.\n",
+      "\n",
+      "------------------------------------------ GRADING ------------------------------------------\n",
+      "This exercise has been correctly solved: False \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prompt template with a placeholder for the variable content\n",
+    "PROMPT = \"\"\"Please classify this email into one of the following categories:\n",
+    "(A) Pre-sale question\n",
+    "(B) Broken or defective item\n",
+    "(C) Billing question\n",
+    "(D) Other (please explain)\n",
+    "\n",
+    "After analyzing the email, provide your answer by wrapping ONLY the letter of the correct classification (without parentheses) in <answer></answer> tags. For example, if the correct classification is \"Broken or defective item\", your response should include <answer>B</answer>.\n",
+    "\n",
+    "Do not include any other text within the tags. After providing the tagged answer, briefly explain your classification.\n",
+    "\n",
+    "Here's the email to classify:\n",
+    "\n",
+    "{email}\"\"\"\n",
+    "\n",
+    "# Prefill for Claude's response, if any\n",
+    "PREFILL = \"\"\n",
+    "\n",
+    "# Variable content stored as a list\n",
+    "EMAILS = [\n",
+    "    \"Hi -- My Mixmaster4000 is producing a strange noise when I operate it. It also smells a bit smoky and plasticky, like burning electronics.  I need a replacement.\", # (B) Broken or defective item\n",
+    "    \"Can I use my Mixmaster 4000 to mix paint, or is it only meant for mixing food?\", # (A) Pre-sale question OR (D) Other (please explain)\n",
+    "    \"I HAVE BEEN WAITING 4 MONTHS FOR MY MONTHLY CHARGES TO END AFTER CANCELLING!!  WTF IS GOING ON???\", # (C) Billing question\n",
+    "    \"How did I get here I am not good with computer.  Halp.\" # (D) Other (please explain)\n",
+    "]\n",
+    "\n",
+    "# Correct categorizations stored as a list of lists to accommodate the possibility of multiple correct categorizations per email\n",
+    "ANSWERS = [\n",
+    "    [\"B\"],\n",
+    "    [\"A\",\"D\"],\n",
+    "    [\"C\"],\n",
+    "    [\"D\"]\n",
+    "]\n",
+    "\n",
+    "# Dictionary of string values for each category to be used for regex grading\n",
+    "REGEX_CATEGORIES = {\n",
+    "    \"A\": \"A\\) P\",\n",
+    "    \"B\": \"B\\) B\",\n",
+    "    \"C\": \"C\\) B\",\n",
+    "    \"D\": \"D\\) O\"\n",
+    "}\n",
+    "\n",
+    "# Iterate through list of emails\n",
+    "for i,email in enumerate(EMAILS):\n",
+    "\n",
+    "    # Substitute the email text into the email placeholder variable\n",
+    "    formatted_prompt = PROMPT.format(email=email)\n",
+    "\n",
+    "    # Get Claude's response\n",
+    "    response = get_completion(formatted_prompt, prefill=PREFILL)\n",
+    "\n",
+    "    # Grade Claude's response\n",
+    "    grade = any([bool(re.search(REGEX_CATEGORIES[ans], response)) for ans in ANSWERS[i]])\n",
+    "\n",
+    "    # Print Claude's response\n",
+    "    print(\"--------------------------- Full prompt with variable substutions ---------------------------\")\n",
+    "    print(\"USER TURN\")\n",
+    "    print(formatted_prompt)\n",
+    "    print(\"\\nASSISTANT TURN\")\n",
+    "    print(PREFILL)\n",
+    "    print(\"\\n------------------------------------- Claude's response -------------------------------------\")\n",
+    "    print(response)\n",
+    "    print(\"\\n------------------------------------------ GRADING ------------------------------------------\")\n",
+    "    print(\"This exercise has been correctly solved:\", grade, \"\\n\\n\\n\\n\\n\\n\")\n"
+   ]
   },
   {
    "cell_type": "code",
